Enable file history with leader+h

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,7 +24,7 @@ color6 #05989a
 color14 #34e2e2
 # light
 color7 #d3d7cf
-color15 #ededec
+color15 #9c9c9c
 selection_foreground #ffffff
 
 font_family Fira Code Retina
@@ -51,17 +51,19 @@ shell_integration no-title
 active_border_color #757575
 inactive_border_color #2D2D2D
 
-enabled_layouts tall, vertical, stack
-
 macos_option_as_alt yes
 
 kitty_mod cmd
 
+enabled_layouts tall, vertical, stack
+# Toggle full screen view
+map kitty_mod+shift+enter toggle_layout stack
+# Toggle stacked on the right view
+map kitty_mod+shift+r next_layout
+
 # Windows
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
-map kitty_mod+shift+enter toggle_layout stack
-map kitty_mod+shift+r toggle_layout vertical
 map kitty_mod+w close_window
 map kitty_mod+shift+] next_tab
 map kitty_mod+shift+[ previous_tab
